// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Title/> renders properly with default props 1`] = `
<h1
  class="Title-gs7lg-0 cTxgJG"
>
  Hello World
</h1>
`;

exports[`<Title/> renders properly with passed props 1`] = `
<h1
  class="Title-gs7lg-0 gPeMbJ"
>
  Hello World
</h1>
`;
